# diar

./: .gitignore  Cargo.toml  rustfmt.toml
examples/: test_dicts.rs
src/: errors.rs  lib.rs  names.rs  object_io.rs  objects.rs
src/compress/: compressor.rs  content_hash.rs  data_source.rs  diar_builder.rs  dict_builder.rs  dictionary_sample_builder.rs  dictionary_set.rs  dir_tree.rs  mod.rs  writer.rs
src/writer/: content_hash.rs  diar_builder.rs  dict_builder.rs  dir_tree.rs  mod.rs
