[package]
name = "diar"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.4"
derive_setters = "0.1.5"
fs2 = "0.4"
jwalk = "0.6"
memmap2 = "0.3"
mime_guess = "2.0"
num_cpus = "1.13"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.5"
thiserror = "1.0"
tracing = "0.1"
tree_magic_mini = { version = "3.0", features = ["tree_magic_db"] }
zstd = { version = "0.9", features = ["experimental", "zstdmt"] }
zstd-sys = "1.6"

[dev-dependencies]
tracing-subscriber = "0.2"

[profile.dev]
opt-level = 1
lto = false

[profile.release]
opt-level = 1
debug = 1
lto = true
