[package]
name = "diar"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.4"
derive_setters = "0.1.5"
fastcdc = "3.0"
jwalk = "0.8"
mime_guess = "2.0"
num_cpus = "1.13"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.5"
thiserror = "1.0"
tracing = "0.1"
tree_magic_mini = { version = "3.0", features = ["tree_magic_db"] }
zstd = { version = "0.12", features = ["experimental", "zstdmt"] }
zstd-sys = "2.0"

[dev-dependencies]
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1
lto = false

[profile.release]
opt-level = 1
debug = 1
lto = true
