[package]
name = "diar"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.4"
derive_setters = "0.1.5"
fastcdc = "3.0"
entropy = "0.4"
jwalk = "0.8"
num_cpus = "1.13"
thiserror = "1.0"
tracing = "0.1"
twox-hash = "1.6.3"
zstd = { version = "0.12", features = ["experimental", "zstdmt"] }
zstd-sys = "2.0"

[dev-dependencies]
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 2
lto = false

[profile.release]
opt-level = 2
debug = 1
lto = true
